--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://somarapukalyanram_db_user:xzQxVT4CBIlXSOCU@cluster0.pgkewlz.mongodb.net/chatify_db?appName=Cluster0
-NODE_ENV=development
+NODE_ENV=production
