--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: chatify-app
     runtime: node
     plan: free
-    buildCommand: npm run build
-    startCommand: npm start
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
