--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: chatify-app
     runtime: node
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: npm --prefix backend install
+    startCommand: npm --prefix backend start
     envVars:
       - key: NODE_ENV
         value: production
