Build frontend during Render deploy: install & build frontend before backend install

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: chatify-app
     runtime: node
     plan: free
-    buildCommand: npm --prefix backend install
+    buildCommand: npm --prefix frontend install && npm --prefix frontend run build && npm --prefix backend install
     startCommand: npm --prefix backend start
     envVars:
       - key: NODE_ENV
